--- a/templates/login.html
+++ b/templates/login.html
@@ -160,11 +160,20 @@
 
 <body>
     <div class="container">
+        {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+                <li class="{{ message.tags }}">{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+
         <div class="header-image">
             <div class="header-content">
                 {% comment %} Arena21 {% endcomment %}
             </div>
         </div>
+        
         <div id="login-form">
             <main>
                 <h2>Login</h2>
