--- a/templates/login.html
+++ b/templates/login.html
@@ -13,28 +13,20 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            background-color: #f2f2f2;
+            background-color: #ffffff;
             color: #00796b;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
         }
 
         .container {
-
-            width: 380px;
-            background: #ffffff;
-            border-radius: 30px;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+            width: 480px;
+            margin: 0 auto;
+            padding: 20px;
+            padding-bottom: 80px;
+            min-height: 100vh;
             overflow: hidden;
-            text-align: center;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            margin: 0 15px;
         }
+        
+        
 
         .header-image {
             background-image: url("{% static 'images/1.png' %}");
@@ -44,6 +36,7 @@
             border-bottom-left-radius: 160px;
             padding-top: 60%; /* Maintain aspect ratio */
             position: relative;
+            margin-bottom: 20px;
         }
 
         .header-content {
@@ -160,20 +153,11 @@
 
 <body>
     <div class="container">
-        {% if messages %}
-        <ul class="messages">
-            {% for message in messages %}
-                <li class="{{ message.tags }}">{{ message }}</li>
-            {% endfor %}
-        </ul>
-        {% endif %}
-
         <div class="header-image">
             <div class="header-content">
                 {% comment %} Arena21 {% endcomment %}
             </div>
         </div>
-        
         <div id="login-form">
             <main>
                 <h2>Login</h2>
