--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
         <h2>Total Balance</h2>
         <div class="balance-amount">&#8377; {{ profile.balance }}</div>
         <div class="balance-actions">
-            {% comment %} <a href="{% url 'dashboard' %}" class="my-account-link">   {% endcomment %}
+            <a href="{% url 'dashboard' %}" class="my-account-link">  
                 <button class="my-account">My Account</button>
             </a>
         </div>
@@ -168,7 +168,7 @@
             
                 <p class="balance-amount-model">Your Balance: &#8377; {{ profile.balance }}</p>
             </form>
-            
+            <div id="message"></div> <!-- Display success or error messages here -->
         </div>
     </div>
 {% endblock %}
